[gd_scene load_steps=3 format=3 uid="uid://dm8jrb5keueh1"]

[ext_resource type="Script" path="res://scenes/gameplay/result_layer/result_layer.gd" id="1_xjjvh"]
[ext_resource type="Theme" uid="uid://ducfept6pmkkm" path="res://resources/theme/theme-main.tres" id="3_gq5vq"]

[node name="ResultLayer" type="CanvasLayer"]
script = ExtResource("1_xjjvh")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.243137, 0.211765, 0.290196, 0.717647)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxOptions" type="VBoxContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -38.0
offset_right = 58.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="Next" type="LinkButton" parent="MarginContainer/Control/VBoxOptions"]
layout_mode = 2
text = "NEXT LEVEL"

[node name="Retry" type="LinkButton" parent="MarginContainer/Control/VBoxOptions"]
layout_mode = 2
focus_mode = 1
text = "<RETRY or DONT GIVE UP>"

[node name="MainMenu" type="LinkButton" parent="MarginContainer/Control/VBoxOptions"]
layout_mode = 2
focus_mode = 1
text = "MAIN MENU"

[node name="Result" type="Label" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -222.0
offset_right = 222.0
offset_bottom = 28.0
grow_horizontal = 2
theme = ExtResource("3_gq5vq")
theme_override_colors/font_color = Color(0.788235, 0.788235, 0.788235, 1)
text = "<VICTORY or DEFEAT>"

[connection signal="pressed" from="MarginContainer/Control/VBoxOptions/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxOptions/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxOptions/MainMenu" to="." method="_on_main_menu_pressed"]
